--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
              <!--==================== QUALIFICATION 1 ====================--> 
              <div class="qualification__data">
                  <div>
-                     <h3 class="qualification__title">BS Information Technology </h3>
-                     <span class="qualification__subtitle">Eastern Samar State University</span>
+                     <h3 class="qualification__title">Eastern Samar State University</h3>
+                     <span class="qualification__subtitle">BS Information Technology </span>
                      <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
                         2020 - 2024
