--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="home__data"data-aos="zoom-in">
                             <h1></h1>
                             <h1  class="home__title">
-                                <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Arman"]' style="color: white;">
+                                <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Arman"]' style="color: rgb(12, 205, 215);">
                                   <span class="wrap"></span>
                                 </a>
                               </h1>
