--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                                 </div>
                                 <div class="skills__data">
                                    <div class="skills__titles">
-                                       <h3 class="skills__name">MS Office</h3>
-                                       <span class="skills__number">90%</span>
+                                       <h3 class="skills__name">Javascrip</h3>
+                                       <span class="skills__number">60%</span>
                                    </div>
                                    <div class="skills__bar">
                                        <span class="skills__percentage skills__office"></span>
