--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="skills__data">
                                    <div class="skills__titles">
-                                       <h3 class="skills__name">Javascrip</h3>
+                                       <h3 class="skills__name">Javascript</h3>
                                        <span class="skills__number">60%</span>
                                    </div>
                                    <div class="skills__bar">
