--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Peter Computer Sales and Services</h3>
-                        <span class="qualification__subtitle">88 J Bocar St. Borangan City, Eastern Samar</span>
+                        <span class="qualification__subtitle">Student Intern</span>
                         <div class="qualification__calendar">
                            <i class="uil uil-calendar-alt"></i>
                            2020
