--- a/index.html
+++ b/index.html
@@ -225,17 +225,15 @@
                                     </div>
                                 </div>
                                 <div class="skills__data">
-                                   <div class="skills__titles">
-                                       <h3 class="skills__name">Javascript</h3>
-                                       <span class="skills__number">60%</span>
-                                   </div>
-                                   <div class="skills__bar">
-                                       <span class="skills__percentage skills__office"></span>
-                                   </div>
-                                </div>
-                                <div class="skills__data">
                                     <div class="skills__titles">
-             
+                                      <h3 class="skills__name">Javascript</h3>
+                                      <span class="skills__number">70%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                       <span class="skills__percentage skills__google"></span>
+                                    </div>
+                                 </div>
+                                
                            <h3 class="skills__name">Css</h3>
                                         <span class="skills__number">90%</span>
                                     </div>
