--- a/index.html
+++ b/index.html
@@ -233,8 +233,9 @@
                                        <span class="skills__percentage skills__google"></span>
                                     </div>
                                  </div>
-                                
-                           <h3 class="skills__name">Css</h3>
+                                 <div class="skills__data">
+                                    <div class="skills__titles">
+                                      <h3 class="skills__name">Css</h3>
                                         <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
