--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     <ul class="services__modal-services grid">
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I develop the user interface.</p>
+                            <p>I developed user interface.</p>
                         </li>
 
                         <li class="services__modal-service">
