--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         <div class="services__content">
             <div>
                 <i class="uil uil-arrow services__icon"></i>
-                <h3 class="services__title">Web Developer<br></h3>
+                <h3 class="services__title">Web Developer</h3>
             </div>
             <span class="button button--flex button--small button--link services__button">
                 View more
@@ -481,7 +481,7 @@
                     <ul class="services__modal-services grid">
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I developed user interface.</p>
+                            <p>I develop user interface.</p>
                         </li>
 
                         <li class="services__modal-service">
