--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                    </div>
    
                    <div>
-                       <h3 class="qualification__title">MatchPetapl: Pet Adoption Matching System</h3>
+                       <h3 class="qualification__title">MatchPetpal: Pet Adoption Matching System</h3>
                        <span class="qualification__subtitle">Captsone Project</span>
                        
                    </div>
