--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     </div>
    
                     <div>
-                        <span class="qualification__rounder"></span>
+                        <span class="qualification__rounder">2024</span>
                         <span class="qualification__line"></span>
                     </div>
                 </div>
@@ -363,7 +363,7 @@
                     </div>
    
                     <div>
-                        <span class="qualification__rounder"></span>
+                        <span class="qualification__rounder">2019</span>
                         <span class="qualification__line"></span>
                     </div>
                 </div>
