--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                 <img src="./packages/images/Screenshot (6).png" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
-                    <h3 class="portfolio__title">MatchPetapl: Pet Adoption Matching System</h3>
+                    <h3 class="portfolio__title">MatchPetpall: Pet Adoption Matching System</h3>
                     <p class="portfolio__description">Pet adoption matching system designed to connect prospective pet owners with their 
                         perfect furry companions. </p>
                     <a href="https://www.petfinder.website/" class="button button--flex button--small portfolio__button">
