--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 </div>
                  <!--==================== QUALIFICATION 2 ====================--> 
                 <div class="qualification__data">
-                   <div></div>
+                   <div>
                    <div>
                       <span class="qualification__rounder">Peter Computer Sales and Services</span>
                       <span class="qualification__line">Student Intern</span>
@@ -365,6 +365,7 @@
                        <h3 class="qualification__title"></h3>
                        <span class="qualification__subtitle">2019</span>
                        
+                   </div>
                    </div>
               
    
