--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 
                         <div>
                             <h3 class="contact__title">E-mail</h3>
-                            <span class="contatc__subtitle">sajordaarmanb@gmail.com</span>
+                            <span class="contatc__subtitle">skyler27mercales@gmail.com</span>
                         </div>
                     </div>
 
@@ -609,7 +609,7 @@
 
                         <div>
                             <h3 class="contact__title">Location</h3>
-                            <span class="contatc__subtitle">Sulangan, Guiuan, Eastern Samar</span>
+                            <span class="contatc__subtitle">2539 Oro-B, San Andres Bukid, Manila, Metro Manila</span>
                         </div>
                     </div>
                 </div>
